load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
        "//985-version/src/main/resources-filtered:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_inject_guice",
        "@maven//:commons_io_commons_io",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_api_mockito",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

run_analysis()
