load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/wings-software/portal/product/ci/engine-tester",
    visibility = ["//visibility:private"],
    deps = [
        "//product/ci/engine/proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "engine-tester",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
