load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "scm_lib",
    srcs = ["main.go"],
    importpath = "github.com/wings-software/portal/product/ci/scm",
    visibility = ["//visibility:private"],
    deps = [
        "//commons/go/lib/logs",
        "//product/ci/scm/grpc",
        "@com_github_alexflint_go_arg//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "scm",
    embed = [":scm_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "scm_test",
    srcs = ["main_test.go"],
    embed = [":scm_lib"],
    deps = [
        "//product/ci/scm/grpc",
        "//product/ci/scm/grpc/mocks",
        "@com_github_golang_mock//gomock",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//product/ci/scm/grpc",
        "//product/ci/scm/grpc/mocks",
        "@com_github_golang_mock//gomock:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
