load("//:tools/bazel/protos/harness_grpc_library.bzl", "harness_grpc_library")

harness_grpc_library(
    name = "970_api_services_beans_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//970-api-services-beans/src/main/proto/io/harness/logging:970_api_service_beans_proto",
    ],
)
