load("//:tools/bazel/protos/harness_grpc_library.bzl", "harness_grpc_library")

harness_grpc_library(
    name = "970_api_services_beans_java_proto",
    java_deps = [
        "//980-commons:module",
    ],
    java_sources = glob(["**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//970-api-services-beans/src/main/proto/io/harness/logging:970_api_service_beans_proto",
    ],
)
