load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "archive",
    srcs = ["archive.go"],
    importpath = "github.com/wings-software/portal/commons/go/lib/archive",
    visibility = ["//visibility:public"],
    deps = [
        "//commons/go/lib/filesystem",
        "//commons/go/lib/utils",
        "@com_github_pkg_errors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "archive_test",
    srcs = ["archive_test.go"],
    embed = [":archive"],
    deps = [
        "//commons/go/lib/filesystem",
        "//commons/go/lib/logs",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["archive_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//commons/go/lib/filesystem",
        "//commons/go/lib/logs",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
