load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gcputils",
    srcs = [
        "gcs.go",
        "gcs_adapter.go",
        "gcs_adapter_mock.go",
    ],
    importpath = "github.com/wings-software/portal/commons/go/lib/gcputils",
    visibility = ["//visibility:public"],
    deps = [
        "//commons/go/lib/filesystem",
        "//commons/go/lib/utils",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "gcputils_test",
    srcs = ["gcs_test.go"],
    embed = [":gcputils"],
    deps = [
        "//commons/go/lib/filesystem",
        "//commons/go/lib/logs",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//option",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["gcs_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//commons/go/lib/filesystem",
        "//commons/go/lib/logs",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
